--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               Projecten
             </a>
             <ul class="dropdown-menu text-black">
-              <li><a class="dropdown-item" href="project1.html">Project 1</a></li>
+              <li><a class="dropdown-item" href="project1.html">Project netwerkbekabeling</a></li>
               <li><a class="dropdown-item" href="#">Project 2</a></li>
               <li><a class="dropdown-item" href="#">Project 3</a></li>
               <li><a class="dropdown-item" href="#">Project 4</a></li>
