--- a/index.html
+++ b/index.html
@@ -126,21 +126,21 @@
     <div class="col-md-4 mb-3 text-center">
       <div class="image-container">
         <img src="assets/images/Foto_01.png" alt="foto_01" width="200px" height="auto">
-        <figcaption class="text-center mb-3">&copy;www.google.com</figcaption>
+        <figcaption class="text-center mb-3">&copy;https://pixabay.com/nl/</figcaption>
       </div>
     </div>
 
     <div class="col-md-4 mb-3 text-center">
       <div class="image-container">
         <img src="assets/images/Foto_02.jpg" alt="foto_02" width="200px" height="auto">
-        <figcaption class="text-center mb-3">&copy;www.google.com</figcaption>
+        <figcaption class="text-center mb-3">&copy;https://pixabay.com/nl/</figcaption>
       </div>
     </div>
 
     <div class="col-md-4 mb-3 text-center">
       <div class="image-container">
         <img src="assets/images/Foto_03.jpg" alt="foto_03" width="200px" height="auto">
-        <figcaption class="text-center mb-3">&copy;www.google.com</figcaption>
+        <figcaption class="text-center mb-3">&copy;https://pixabay.com/nl/</figcaption>
       </div>
     </div>
   </div>
