--- a/portofolio.html
+++ b/portofolio.html
@@ -39,7 +39,7 @@
                 Projecten
               </a>
               <ul class="dropdown-menu text-black">
-                <li><a class="dropdown-item" href="project1.html">Project 1</a></li>
+                <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                 <li><a class="dropdown-item" href="#">Project 2</a></li>
                 <li><a class="dropdown-item" href="#">Project 3</a></li>
                 <li><a class="dropdown-item" href="#">Project 4</a></li>
