--- a/project1.html
+++ b/project1.html
@@ -43,7 +43,7 @@
                   Projecten
                 </a>
                 <ul class="dropdown-menu ">
-                  <li><a class="dropdown-item" href="project1.html">Project 1</a></li>
+                  <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                   <li><a class="dropdown-item" href="#">Project 2</a></li>
                   <li><a class="dropdown-item" href="#">Project 3</a></li>
                   <li><a class="dropdown-item" href="#">Project 4</a></li>
