--- a/portofolio.html
+++ b/portofolio.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>oefening</title>
+    <title>Portfolio</title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- JavaScript: Bootstrap Bundle with Popper -->
@@ -39,7 +39,7 @@
                 Projecten
               </a>
               <ul class="dropdown-menu text-black">
-                <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
+                <li><a class="dropdown-item" href="project1.html">Project 1</a></li>
                 <li><a class="dropdown-item" href="#">Project 2</a></li>
                 <li><a class="dropdown-item" href="#">Project 3</a></li>
                 <li><a class="dropdown-item" href="#">Project 4</a></li>
@@ -57,31 +57,31 @@
     </nav>
 <main class="container my-4"> <!-- Voeg een container toe voor een nette uitlijning -->
   
-  <h1 class="col display-3 tekst-donkerblauw text-center">Ontdek Mijn 6 Projecten</h1>
+  <h1 class="col display-3 tekst-donkerblauw text-center"><strong>Mijn projecten</strong></h1>
 <hr>
   <div class="row"> <!-- Gebruik Bootstrap's row -->
     <div class="col-md-4"> <!-- Gebruik kolommen voor responsieve lay-out -->
-      <div class="card mb-4"> <!-- Voeg een marge toe onder de card -->
+      <div class="card mb-4 border-black"> <!-- Voeg een marge toe onder de card -->
         <a href="project1.html">
-        <img src="assets/images/Foto_01.png"  class="card-img-top" alt="foto_01">
+        <img src="assets/images/packet.png"  class="card-img-top" alt="packet Tracer">
         </a>
         <div class="card-body blauwgrijs tekst-donkerblauw">
-          <h5 class="card-title">Project 1</h5>
-          <p class="card-text">Hier komt een korte tekst over dit project.</p>
+          <h5 class="card-title">Netwerkbekabeling</h5>
+          <p class="card-text">Netwerkbekabeling voor Webwizz</p>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card mb-4">
+      <div class="card mb-4 border-black">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
         <div class="card-body blauwgrijs tekst-donkerblauw">
-          <h5 class="card-title">Project 2</h5>
-          <p class="card-text">Hier komt een korte tekst over dit project.</p>
+          <h5 class="card-title">Project Portfolio website</h5>
+          <p class="card-text">Portfolio maken met html5 en Bootstrap.</p>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card mb-4">
+      <div class="card mb-4 border-black">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project 3</h5>
@@ -92,7 +92,7 @@
   </div>
   <div class="row"> <!-- Een nieuwe row voor de tweede groep -->
     <div class="col-md-4">
-      <div class="card mb-4">
+      <div class="card mb-4 border-black">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project 4</h5>
@@ -101,7 +101,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card mb-4">
+      <div class="card mb-4 border-black">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project 5</h5>
@@ -110,7 +110,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card mb-4">
+      <div class="card mb-4 border-black">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project 6</h5>
