--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark donkerblauw text-black">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/images/Logo_Portofolio-removebg-preview.png" alt="Logo_Portofolio-removebg-preview" width="100%">
+        <img src="assets/images/logo22.png" alt="Logo_Portofolio-removebg-preview" width="100%">
       </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
             <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="portofolio.html">Portofolio</a>
+            <a class="nav-link" href="portfolio.html">Portfolio</a>
           </li>
           
           <li class="nav-item dropdown">
@@ -131,7 +131,7 @@
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="portofolio.html" class="nav-link px-2 text-body-secondary">portofolio</a></li>
+            <li class="nav-item"><a href="portfolio.html" class="nav-link px-2 text-body-secondary">portfolio</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-body-secondary">contact</a></li>
           </ul>
           <p class="text-center text-body-secondary">&copy; 2024 Mohamed Darkaoui, AP Hogeschool</p>
