--- a/project1.html
+++ b/project1.html
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portofolio.html">Portofolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               
               <!-- Projecten Dropdown -->
@@ -185,7 +185,7 @@
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="portofolio.html" class="nav-link px-2 text-body-secondary">portofolio</a></li>
+            <li class="nav-item"><a href="portfolio.html" class="nav-link px-2 text-body-secondary">portfolio</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-body-secondary">contact</a></li>
           </ul>
           <p class="text-center text-body-secondary ">&copy; 2024 Mohamed Darkaoui, AP Hogeschool</p>
