--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   </nav>
     
     <header class="row m-5">
-      <h1 class="col display-3 tekst-donkerblauw text-center">welkom op mijn<br>portofolio</h1>
+      <h1 class="col display-3 tekst-donkerblauw text-center">portfolio <br> Mohamed Darkaoui</h1>
     </header>
     <main class="container col-md-9">
     <hr class="my-4">
