--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </a>
             <ul class="dropdown-menu text-black">
               <li><a class="dropdown-item" href="project1.html">Project netwerkbekabeling</a></li>
-              <li><a class="dropdown-item" href="#">Project 2</a></li>
+              <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
               <li><a class="dropdown-item" href="#">Project 3</a></li>
               <li><a class="dropdown-item" href="#">Project 4</a></li>
               <li><a class="dropdown-item" href="#">Project 5</a></li>
