--- a/project1.html
+++ b/project1.html
@@ -53,7 +53,7 @@
                 </a>
                 <ul class="dropdown-menu ">
                   <li><a class="dropdown-item" href="project1.html">project Netwerkbekabeling</a></li>
-                  <li><a class="dropdown-item" href="#">Project Portfolio website</a></li>
+                  <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                   <li><a class="dropdown-item" href="#">Project 3</a></li>
                   <li><a class="dropdown-item" href="#">Project 4</a></li>
                   <li><a class="dropdown-item" href="#">Project 5</a></li>
