--- a/project2.html
+++ b/project2.html
@@ -53,8 +53,8 @@
                 </a>
                 <ul class="dropdown-menu ">
                   <li><a class="dropdown-item" href="project1.html">project Netwerkbekabeling</a></li>
-                  <li><a class="dropdown-item" href="#">Project Portfolio website</a></li>
-                  <li><a class="dropdown-item" href="#">Project 3</a></li>
+                  <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
+                  <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
                   <li><a class="dropdown-item" href="#">Project 4</a></li>
                   <li><a class="dropdown-item" href="#">Project 5</a></li>
                   <li><a class="dropdown-item" href="#">Project 6</a></li>
@@ -151,7 +151,7 @@
       <ul class="list-group">
         <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project1.html">Project Netwerkbekabeling</a></li>
         <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project2.html">Project Portfolio website </a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project3.html">Project 3</a></li>
+        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project3.html">Project Dobbelsteen spel</a></li>
         <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project4.html">Project 4</a></li>
         <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project5.html">Project 5</a></li>
         <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project6.html">Project 6</a></li>
