--- a/project3.html
+++ b/project3.html
@@ -43,7 +43,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="portofolio.html">Portofolio</a>
+                <a class="nav-link" href="portfolio.html">Portfolio</a>
               </li>
               
               <!-- Projecten Dropdown -->
@@ -53,8 +53,8 @@
                 </a>
                 <ul class="dropdown-menu ">
                   <li><a class="dropdown-item" href="project1.html">project Netwerkbekabeling</a></li>
-                  <li><a class="dropdown-item" href="#">Project Portfolio website</a></li>
-                  <li><a class="dropdown-item" href="#">Project 3</a></li>
+                  <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
+                  <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
                   <li><a class="dropdown-item" href="#">Project 4</a></li>
                   <li><a class="dropdown-item" href="#">Project 5</a></li>
                   <li><a class="dropdown-item" href="#">Project 6</a></li>
@@ -171,7 +171,7 @@
         <footer class="py-3 my-4">
           <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="index.html" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="portofolio.html" class="nav-link px-2 text-body-secondary">portofolio</a></li>
+            <li class="nav-item"><a href="portfolio.html" class="nav-link px-2 text-body-secondary">portfolio</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-body-secondary">contact</a></li>
           </ul>
           <p class="text-center text-body-secondary ">&copy; 2024 Mohamed Darkaoui, AP Hogeschool</p>
