--- a/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
@@ -40,8 +40,8 @@
               </a>
               <ul class="dropdown-menu text-black">
                 <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
-                <li><a class="dropdown-item" href="#">Project Portfolio website</a></li>
-                <li><a class="dropdown-item" href="#">Project 3</a></li>
+                <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
+                <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
                 <li><a class="dropdown-item" href="#">Project 4</a></li>
                 <li><a class="dropdown-item" href="#">Project 5</a></li>
                 <li><a class="dropdown-item" href="#">Project 6</a></li>
@@ -82,10 +82,10 @@
     </div>
     <div class="col-md-4">
       <div class="card mb-4 border-black">
-        <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
+        <img src="assets/images/Dobbelsteen foto.jpg" class="card-img-top" alt="foto_01">
         <div class="card-body blauwgrijs tekst-donkerblauw">
-          <h5 class="card-title">Project 3</h5>
-          <p class="card-text">Hier komt een korte tekst over dit project.</p>
+          <h5 class="card-title">Project Dobbelsteen spel</h5>
+          <p class="card-text">Een dobbelsteen spel gemaakt met behulp van Visual Studio Code.</p>
         </div>
       </div>
     </div>
