--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,9 @@
     </div>
     <div class="col-md-4">
       <div class="card mb-4 border-black">
+        <a href="project2.html">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
+        </a>
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project Portfolio website</h5>
           <p class="card-text">Portfolio maken met html5 en Bootstrap.</p>
@@ -82,7 +84,9 @@
     </div>
     <div class="col-md-4">
       <div class="card mb-4 border-black">
-        <img src="assets/images/Dobbelsteen foto.jpg" class="card-img-top" alt="foto_01">
+        <a href="project3.html">
+        <img src="assets/images/Kleine dobbelsteen.jpg" class="card-img-top" alt="foto_01">
+        </a>
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project Dobbelsteen spel</h5>
           <p class="card-text">Een dobbelsteen spel gemaakt met behulp van Visual Studio Code.</p>
@@ -93,7 +97,9 @@
   <div class="row"> <!-- Een nieuwe row voor de tweede groep -->
     <div class="col-md-4">
       <div class="card mb-4 border-black">
+        <a href="project4.html">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
+        </a>
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project 4</h5>
           <p class="card-text">Hier komt een korte tekst over dit project.</p>
@@ -102,7 +108,9 @@
     </div>
     <div class="col-md-4">
       <div class="card mb-4 border-black">
+        <a href="project5.html">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
+        </a>
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project 5</h5>
           <p class="card-text">Hier komt een korte tekst over dit project.</p>
@@ -111,7 +119,9 @@
     </div>
     <div class="col-md-4">
       <div class="card mb-4 border-black">
+        <a href="project6.html">
         <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
+        </a>
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project 6</h5>
           <p class="card-text">Hier komt een korte tekst over dit project.</p>
