--- a/project3.html
+++ b/project3.html
@@ -98,7 +98,7 @@
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">resultaat</h2>
           <a href="#" rel="noopener">
-            <figure><img src="assets/images/resultaat dobbelsteenspel.png" class="img-fluid 100%" alt="patch plan">
+            <figure><img src="assets/images/dobbelsteenspel resultaat.png" class="img-fluid 100%" alt="patch plan">
               <figcaption class="h6 small mt-2">&copy; Mohamed Darkaoui</figcaption>
             </figure>
           </a>
