--- a/portfolio.html
+++ b/portfolio.html
@@ -85,7 +85,7 @@
     <div class="col-md-4">
       <div class="card mb-4 border-black">
         <a href="project3.html">
-        <img src="assets/images/Kleine dobbelsteen.jpg" class="card-img-top" alt="foto_01">
+        <img src="assets/images/dobbelsteen foto.jpg" class="card-img-top" alt="foto_01">
         </a>
         <div class="card-body blauwgrijs tekst-donkerblauw">
           <h5 class="card-title">Project Dobbelsteen spel</h5>
