--- a/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
@@ -42,9 +42,9 @@
                 <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                 <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                 <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
-                <li><a class="dropdown-item" href="#">Project 4</a></li>
-                <li><a class="dropdown-item" href="#">Project 5</a></li>
-                <li><a class="dropdown-item" href="#">Project 6</a></li>
+                <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
               </ul>
             </li>
             
@@ -61,60 +61,72 @@
 <hr>
   <div class="row"> <!-- Gebruik Bootstrap's row -->
     <div class="col-md-4"> <!-- Gebruik kolommen voor responsieve lay-out -->
-      <div class="card mb-4 border-black"> <!-- Voeg een marge toe onder de card -->
+      <div class="card mb-4 border-black card-img"> <!-- Voeg een marge toe onder de card -->
         <a href="project1.html">
         <img src="assets/images/packet.png"  class="card-img-top" alt="packet Tracer">
         </a>
-        <div class="card-body blauwgrijs tekst-donkerblauw">
+        <div class="card-body grijs tekst-donkerblauw">
           <h5 class="card-title">Netwerkbekabeling</h5>
           <p class="card-text">Netwerkbekabeling voor Webwizz</p>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card mb-4 border-black">
-        <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
-        <div class="card-body blauwgrijs tekst-donkerblauw">
+    <div class="col-md-4 ">
+      <div class="card mb-4 border-black card-img">
+        <a href="project2.html">
+        <img src="assets/images/portfolio.png" class="card-img-top" alt="foto_01">
+        </a>
+        <div class="card-body grijs tekst-donkerblauw">
           <h5 class="card-title">Project Portfolio website</h5>
           <p class="card-text">Portfolio maken met html5 en Bootstrap.</p>
         </div>
       </div>
     </div>
-    <div class="col-md-4">
-      <div class="card mb-4 border-black">
+    <div class="col-md-4 ">
+      <div class="card mb-4 border-black card-img">
+        <a href="project3.html">
         <img src="assets/images/dobbelsteen foto.jpg" class="card-img-top" alt="foto_01">
-        <div class="card-body blauwgrijs tekst-donkerblauw">
+        </a>
+        <div class="card-body grijs tekst-donkerblauw">
           <h5 class="card-title">Project Dobbelsteen spel</h5>
           <p class="card-text">Een dobbelsteen spel gemaakt met behulp van Visual Studio Code.</p>
         </div>
       </div>
     </div>
   </div>
+
+  <hr class="my-4 wit">
   <div class="row"> <!-- Een nieuwe row voor de tweede groep -->
     <div class="col-md-4">
-      <div class="card mb-4 border-black">
-        <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
-        <div class="card-body blauwgrijs tekst-donkerblauw">
-          <h5 class="card-title">Project 4</h5>
-          <p class="card-text">Hier komt een korte tekst over dit project.</p>
+      <div class="card mb-4 border-black card-img">
+        <a href="project4.html">
+        <img src="assets/images/binnenkort verwacht(1).jpg" class="card-img-top" alt="binnenkort verwacht">
+        </a>
+        <div class="card-body grijs tekst-donkerblauw">
+          <h5 class="card-title">binnenkort verwacht</h5>
+          <p class="card-text">binnenkort verwacht</p>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card mb-4 border-black">
-        <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
-        <div class="card-body blauwgrijs tekst-donkerblauw">
-          <h5 class="card-title">Project 5</h5>
-          <p class="card-text">Hier komt een korte tekst over dit project.</p>
+      <div class="card mb-4 border-black card-img">
+        <a href="project5.html">
+          <img src="assets/images/binnenkort verwacht(1).jpg" class="card-img-top" alt="binnenkort verwacht">
+        </a>
+        <div class="card-body grijs tekst-donkerblauw">
+          <h5 class="card-title">binnenkort verwacht</h5>
+          <p class="card-text">binnenkort verwacht</p>
         </div>
       </div>
     </div>
     <div class="col-md-4">
-      <div class="card mb-4 border-black">
-        <img src="assets/images/Foto_01.png" class="card-img-top" alt="foto_01">
-        <div class="card-body blauwgrijs tekst-donkerblauw">
-          <h5 class="card-title">Project 6</h5>
-          <p class="card-text">Hier komt een korte tekst over dit project.</p>
+      <div class="card mb-4 border-black card-img">
+        <a href="project6.html">
+          <img src="assets/images/binnenkort verwacht(1).jpg" class="card-img-top" alt="binnenkort verwacht">
+        </a>
+        <div class="card-body grijs tekst-donkerblauw">
+          <h5 class="card-title">binnenkort verwacht</h5>
+          <p class="card-text">binnenkort verwacht</p>
         </div>
       </div>
     </div>
