--- a/portofolio_Mohamed-Darkaoui/oefening-home/project2.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/project2.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Netwerkbekabeling</title>
+  <title>Portfolio website</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -48,16 +48,16 @@
               
               <!-- Projecten Dropdown -->
               <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="projectenDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <a class="nav-link dropdown-toggle" id="projectenDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Projecten
                 </a>
-                <ul class="dropdown-menu ">
-                  <li><a class="dropdown-item" href="project1.html">project Netwerkbekabeling</a></li>
+                <ul class="dropdown-menu text-black">
+                  <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                   <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                   <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
-                  <li><a class="dropdown-item" href="#">Project 4</a></li>
-                  <li><a class="dropdown-item" href="#">Project 5</a></li>
-                  <li><a class="dropdown-item" href="#">Project 6</a></li>
+                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
                 </ul>
               </li>
               
@@ -69,7 +69,7 @@
         </div>
       </nav>
 <header class="row m-5">
-    <h1 class="display-4 tekst-donkerblauw text-center"><strong>Netwerkbekabeling</strong></h1>
+    <h1 class="display-4 tekst-donkerblauw text-center"><strong>Portfolio website</strong></h1>
 </header>
 <div class="container">
   <div class="row">
@@ -77,7 +77,7 @@
       <section id="Projectbeschrijving" class="row">
         <article class="col-12 mb-3">
           <h2 class="text-uppercase tekst-donkerblauw fs-5 fw-bolder pt-3">beschrijving</h2>
-          <p>Voor Webwizz heb ik met behulp van Packet Tracer een netwerkbekabeling geschetst voor het gelijkvloers en de eerste verdieping. Daarnaast heb ik laptops voorzien van een draadloze verbinding. De bekabeling is ontworpen voor 20 pc’s, 6 printers en 20 IP-telefoons. Verder heb ik een gestructureerd patchplan en een racklayout opgesteld, en een bijbehorende aankooplijst samengesteld.</p>
+          <p>Voor mijn portfolio-website heb ik gebruik gemaakt van Visual Studio Code, HTML5 en Bootstrap. De site bestaat uit meerdere pagina's: een homepagina, een portfolio-overzicht met al mijn projecten, en afzonderlijke projectpagina's met gedetailleerde informatie. Daarnaast is er een contactpagina met een formulier waarmee gebruikers rechtstreeks een bericht kunnen sturen of een e-mail naar mij kunnen verzenden.</p>
         </article>
         <hr>
 
@@ -87,31 +87,22 @@
 
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">Packet tracer</h2>
-          <a href="#" rel="noopener">
             <figure>
-              <img src="assets/images/packet.png" class="img-fluid 100%" alt="foto van packet tracer">
+              <a href="assets/images/head html.png">
+              <img src="assets/images/head html.png" class="img-fluid 100%" alt="foto van packet tracer">
+              </a>
               <figcaption class="h6 small mt-2">&copy; Mohamed Darkaoui</figcaption>
             </figure>
-          </a>
-        </article>
-
-        <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
-          <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">patch plan</h2>
-          <a href="#" rel="noopener">
-            <figure><img src="assets/images/excel patch.png" class="img-fluid 100%" alt="patch plan">
-              <figcaption class="h6 small mt-2">&copy; Mohamed Darkaoui</figcaption>
-            </figure>
-          </a>
         </article>
 
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">Rack layout</h2>
-          <a href="#" rel="noopener">
-            <figure><img src="assets/images/excel rack.png" class="img-fluid 100%" alt="foto van beheer"
-                title="dé ultieme Vaya-manual">
+            <figure>
+              <a href="assets/images/mappenstructuur.png">
+              <img src="assets/images/mappenstructuur.png" class="img-fluid 100%" alt="foto van beheer">
+              </a>
               <figcaption class="h6 small mt-2">&copy; Mohamed Darkaoui</figcaption>
             </figure>
-          </a>
         </article>
       </section>
       <hr>
@@ -119,19 +110,17 @@
         <div class="col-lg-6">
             <h3 class="tekst-donkerblauw">tools</h3>
             <ul>
-                <li>Packet Tracer</li>
-                <li>Excel</li>
-                <li>Word</li>
+                <li>visual studio code</li>
+                <li>Bootstrap</li>
+                <li>HTML5</li>
             </ul>
         </div>
         <div class="col-lg-6">
             <h3 class="tekst-donkerblauw">skills</h3>
             <ul>
-                <li>Teamwork</li>
                 <li>Creativiteit</li>
                 <li>Probleemoplossend denken</li>
                 <li>Tijdmanagement</li>
-                <li>Communicatievaardigheden</li>
             </ul>
         </div>
     </div>
@@ -149,27 +138,27 @@
     <aside class="col md-3">
       <h2 class="text-uppercase tekst-donkerblauw fs-5 fw-bolder pt-3">Projecten</h2>
       <ul class="list-group">
-        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project1.html">Project Netwerkbekabeling</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project2.html">Project Portfolio website </a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project3.html">Project Dobbelsteen spel</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project4.html">Project 4</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project5.html">Project 5</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project6.html">Project 6</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project1.html">Project Netwerkbekabeling</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project2.html">Project Portfolio website </a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project3.html">Project Dobbelsteen spel</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project4.html">Project binnenkort verwacht</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project5.html">Project binnenkort verwacht</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project6.html">Project binnenkort verwacht</a></li>
     </ul>
       <ul class="list-inline socials">
         <li class="list-inline-item">
           <a href="https://www.instagram.com" target="_blank">
-            <i class="fs-6 blauwgrijs bi bi-instagram"></i>
+            <i class="fs-6 grijs bi bi-instagram"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://www.facebook.com" target="_blank">
-            <i class="fs-6 blauwgrijs bi bi-facebook"></i>
+            <i class="fs-6 grijs bi bi-facebook"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://twitter.com/" target="_blank">
-            <i class="fs-6 blauwgrijs bi bi-twitter"></i>
+            <i class="fs-6 grijs bi bi-twitter"></i>
           </a>
         </li>
       </ul>
