--- a/project3.html
+++ b/project3.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>1</title>
+  <title>Dobbelsteenspel</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
@@ -51,13 +51,13 @@
                 <a class="nav-link dropdown-toggle" href="#" id="projectenDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   Projecten
                 </a>
-                <ul class="dropdown-menu ">
-                  <li><a class="dropdown-item" href="project1.html">project Netwerkbekabeling</a></li>
+                <ul class="dropdown-menu text-black">
+                  <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                   <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                   <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
-                  <li><a class="dropdown-item" href="#">Project 4</a></li>
-                  <li><a class="dropdown-item" href="#">Project 5</a></li>
-                  <li><a class="dropdown-item" href="#">Project 6</a></li>
+                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
                 </ul>
               </li>
               
@@ -69,7 +69,7 @@
         </div>
       </nav>
 <header class="row m-5">
-    <h1 class="display-4 tekst-donkerblauw text-center"><strong>Dobbelsteen spel</strong></h1>
+    <h1 class="display-4 tekst-donkerblauw text-center"><strong>Dobbelsteenspel</strong></h1>
 </header>
 <div class="container">
   <div class="row">
@@ -87,9 +87,10 @@
 
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">Visual studio code</h2>
-          <a href="#" rel="noopener">
             <figure>
+              <a href="assets/images/dobbelsteen code.png">
               <img src="assets/images/dobbelsteen code.png" class="img-fluid 100%" alt="foto van packet tracer">
+              </a>
               <figcaption class="h6 small mt-2">&copy; Mohamed Darkaoui</figcaption>
             </figure>
           </a>
@@ -97,8 +98,10 @@
 
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">resultaat</h2>
-          <a href="#" rel="noopener">
-            <figure><img src="assets/images/dobbelsteenspel resultaat.png" class="img-fluid 100%" alt="patch plan">
+            <figure>
+              <a href="assets/images/resultaat dobbelsteenspel2.png">
+              <img src="assets/images/resultaat dobbelsteenspel2.png" class="img-fluid 100%" alt="patch plan">
+              </a>
               <figcaption class="h6 small mt-2">&copy; Mohamed Darkaoui</figcaption>
             </figure>
           </a>
@@ -135,27 +138,27 @@
     <aside class="col md-3">
       <h2 class="text-uppercase tekst-donkerblauw fs-5 fw-bolder pt-3">Projecten</h2>
       <ul class="list-group">
-        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project1.html">Project Netwerkbekabeling</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project2.html">Project Portfolio website </a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-2 mb-2"><a href="project3.html">Project Dobbelsteen spel</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project4.html">Project 4</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project5.html">Project 5</a></li>
-        <li class="list-group-item blauwgrijs border rounded border-success p-1 mb-2"><a href="project6.html">Project 6</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project1.html">Project Netwerkbekabeling</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project2.html">Project Portfolio website </a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project3.html">Project Dobbelsteen spel</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project4.html">Project binnenkort verwacht</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project5.html">Project binnenkort verwacht</a></li>
+        <li class="btn text-start list-group-item grijs border rounded border-success p-2 mb-2"><a href="project6.html">Project binnenkort verwacht</a></li>
     </ul>
       <ul class="list-inline socials">
         <li class="list-inline-item">
           <a href="https://www.instagram.com" target="_blank">
-            <i class="fs-6 blauwgrijs bi bi-instagram"></i>
+            <i class="fs-6 grijs bi bi-instagram"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://www.facebook.com" target="_blank">
-            <i class="fs-6 blauwgrijs bi bi-facebook"></i>
+            <i class="fs-6 grijs bi bi-facebook"></i>
           </a>
         </li>
         <li class="list-inline-item">
           <a href="https://twitter.com/" target="_blank">
-            <i class="fs-6 blauwgrijs bi bi-twitter"></i>
+            <i class="fs-6 grijs bi bi-twitter"></i>
           </a>
         </li>
       </ul>
