--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
               <a href="assets/images/Foto_01.png">
               <img src="assets/images/Foto_01.png" class="img-fluid 100%" alt="afbeeldingen" >
               </a>
-              <figcaption class="h6 small mt-2">&copy; https://pixabay.com/</figcaption>
+              <figcaption class="h6 small mt-2">&copy; <a href="http://picabay.com/"> https://pixabay.com</a>/</figcaption>
             </figure>
           </a>
         </article>
@@ -122,7 +122,7 @@
               <a href="assets/images/Foto_02.jpg">
                 <img src="assets/images/Foto_02.jpg" class="img-fluid 100%" alt="afbeeldingen" >
                 </a>
-              <figcaption class="h6 small mt-2">&copy; https://pixabay.com/</figcaption>
+                <figcaption class="h6 small mt-2">&copy; <a href="http://picabay.com/"> https://pixabay.com</a>
             </figure>
           </a>
         </article>
@@ -132,7 +132,7 @@
               <a href="assets/images/Foto_03.jpg">
                 <img src="assets/images/Foto_03.jpg" class="img-fluid 100%" alt="afbeeldingen" >
                 </a>
-              <figcaption class="h6 small mt-2">&copy; https://pixabay.com/</figcaption>
+                <figcaption class="h6 small mt-2">&copy; <a href="http://picabay.com/"> https://pixabay.com</a>
             </figure>
           </a>
         </article>
