--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div class="container-fluid">
           <!-- Logo links -->
           <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo22.png" alt="logo22" width="100%">
+            <img src="assets/images/Logo_Portofolio-removebg-preview.png" alt="Logo_Portofolio-removebg-preview" width="100%">
           </a>
     
           <!-- Hamburger Button rechts -->
@@ -56,9 +56,9 @@
                   <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                   <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                   <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project4.html">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project5.html">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project6.html">Project binnenkort verwacht</a></li>
                 </ul>
               </li>
               
