--- a/portofolio_Mohamed-Darkaoui/oefening-home/project3.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/project3.html
@@ -55,9 +55,9 @@
                   <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                   <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                   <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project4.html">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project5.html">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project6.html">Project binnenkort verwacht</a></li>
                 </ul>
               </li>
               
