--- a/portofolio_Mohamed-Darkaoui/oefening-home/contact.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/contact.html
@@ -44,7 +44,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark donkerblauw text-black">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo22.png" alt="Logo_Portofolio-removebg-preview" width="100%">
+            <img src="assets/images/Logo_Portofolio-removebg-preview.png" alt="Logo_Portofolio-removebg-preview" width="100%">
           </a>
 
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -68,9 +68,9 @@
                     <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                     <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                     <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
-                    <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                    <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                    <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                    <li><a class="dropdown-item" href="project4.html">Project binnenkort verwacht</a></li>
+                    <li><a class="dropdown-item" href="project5.html">Project binnenkort verwacht</a></li>
+                    <li><a class="dropdown-item" href="project6.html">Project binnenkort verwacht</a></li>
                   </ul>         
               </li>
               
