--- a/project1.html
+++ b/project1.html
@@ -28,7 +28,7 @@
         <div class="container-fluid">
           <!-- Logo links -->
           <a class="navbar-brand" href="index.html">
-            <img src="assets/images/logo22.png" alt="Logo_Portofolio-removebg-preview" width="100%">
+            <img src="assets/images/Logo_Portofolio-removebg-preview.png" alt="Logo_Portofolio-removebg-preview" width="100%">
           </a>
     
           <!-- Hamburger Button rechts -->
@@ -55,9 +55,9 @@
                   <li><a class="dropdown-item" href="project1.html">Project Netwerkbekabeling</a></li>
                   <li><a class="dropdown-item" href="project2.html">Project Portfolio website</a></li>
                   <li><a class="dropdown-item" href="project3.html">Project Dobbelsteen spel</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
-                  <li><a class="dropdown-item" href="#">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project4.html">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project5.html">Project binnenkort verwacht</a></li>
+                  <li><a class="dropdown-item" href="project6.html">Project binnenkort verwacht</a></li>
                 </ul>
               </li>
               
@@ -87,7 +87,6 @@
 
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">Packet tracer</h2>
-          <a href="#" rel="noopener">
             <figure>
               <a href="assets/images/packet.png">
               <img src="assets/images/packet.png" class="img-fluid 100%" alt="foto van packet tracer">
@@ -99,7 +98,6 @@
 
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">patch plan</h2>
-          <a href="#" rel="noopener">
             <figure>
               <a href="assets/images/excel patch.png">
               <img src="assets/images/excel patch.png" class="img-fluid 100%" alt="patch plan">
@@ -111,7 +109,6 @@
 
         <article class="col-12 col-sm-6 col-md-4 shop-item image-container">
           <h2 class="text-uppercase tekst-donkerblauw fs-6 fw-bolder pt-3">Rack layout</h2>
-          <a href="#" rel="noopener">
             <figure>
               <a href="assets/images/excel rack.png">
               <img src="assets/images/excel rack.png" class="img-fluid 100%" alt="foto van beheer">
