--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </main>
 
     <aside class="col md-3">
-      <h2 class="text-uppercase tekst-donkerblauw fs-5 fw-bolder pt-3">Projecten</h2>
+      <h2 class="text-uppercase tekst-donkerblauw fs-5 fw-bolder pt-3"></h2>
       <ul class="list-group">
         <li class="btn text-start grijs border rounded border-success p-2 mb-2"><a href="#over mij">over mij</a></li>
         <li class="btn text-start grijs border rounded border-success p-2 mb-2"><a href="#skills">skills </a></li>
