--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
   </div>
 
   <hr class="mt-4 wit">
-  <div class="row"> <!-- Een nieuwe row voor de tweede groep -->
+  <div class="row"> 
     <div class="col-md-4">
       <div class="card mb-4 card-img">
         <a href="project4.html">
