--- a/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
+++ b/portofolio_Mohamed-Darkaoui/oefening-home/portfolio.html
@@ -13,8 +13,10 @@
     <!-- eigen geschreven css voor jouw html-bestand -->
     <link rel="stylesheet" href="css/style.css">
 </head>
+
+
 <body>
-    <header></header>
+    
     <nav class="navbar navbar-expand-lg navbar-dark donkerblauw text-black">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
@@ -56,9 +58,13 @@
       </div>
     </nav>
 <main class="container my-4"> 
-  
+
+  <header>
   <h1 class="col display-3 tekst-donkerblauw text-center"><strong>Mijn projecten</strong></h1>
-<hr>
+  </header>
+
+  <hr>
+  
   <div class="row"> 
     <div class="col-md-4"> 
       <div class="card mb-4 card-img"> 
@@ -96,7 +102,7 @@
   </div>
 
   <hr class="mt-4 wit">
-  <div class="row"> <!-- Een nieuwe row voor de tweede groep -->
+  <div class="row"> 
     <div class="col-md-4">
       <div class="card mb-4 card-img">
         <a href="project4.html">
