--- a/contact.html
+++ b/contact.html
@@ -94,7 +94,7 @@
 
       <hr>
       <div class="row skills-section">
-        <form class="needs-validation grijs tekst-dinkerblauw"
+        <form name="contact" netlify class="needs-validation grijs tekst-dinkerblauw"
         method="POST"
         data-netlify="true"
         name="contact">
