--- a/contact.html
+++ b/contact.html
@@ -93,12 +93,16 @@
     <main class="col-md-9">
 
       <hr>
+
+      
+
       <div class="row skills-section">
         <form name="contact" netlify class="needs-validation grijs tekst-dinkerblauw"
-        method="POST"
+        method="
+        POST"
         data-netlify="true"
         name="contact">
-
+        <form name="contact" method="POST" data-netlify="true" data- netlify-recaptcha="true">
             <div class="row g-3">
               <div class="col-sm-6">
                 <label for="voornaam" class="form-label">voornaam <span class="span">*</span></label>
