--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>home</title>
   <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="css/reset.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <!-- Bootstrap CSS icons: https://icons.getbootstrap.com/#usage -->
@@ -180,7 +181,7 @@
             <li class="nav-item"><a href="portfolio.html" class="nav-link px-2 text-body-secondary">portfolio</a></li>
             <li class="nav-item"><a href="contact.html" class="nav-link px-2 text-body-secondary">contact</a></li>
           </ul>
-          <p class="text-center text-body-secondary ">&copy; 2024 Mohamed Darkaoui, AP Hogeschool</p>
+          <p class="text-center text-body-secondary "><span id="year">&copy; 2024 Mohamed Darkaoui, AP Hogeschool</p></span>
         </footer>
       </div>
     </footer>
